[project]
name = "data-sweeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.15.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "streamlit>=1.42.1",
    "xlsxwriter>=3.2.2",
]
